--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <div class="experience-wrapper">
     <img src="assets/img/fraunhofer.JPEG" alt="Fraunhofer Logo" class="experience-logo" />
     <div class="experience-entry">
-      <h3>Software developer (Working Student)</h3>
+      <h3>Software developer </h3>
       <p><em>Fraunhofer Institute IPT</em> &nbsp; | &nbsp; 10/2024 – Present</p>
       <ul>
         <li>Developed frontend (WPF/XAML) and backend (C#/.NET) components for high-speed microscopy software.</li>
