changed photos adn added logo

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- css-->
      <link rel="stylesheet" href="assets/css/style.css">
     
-    
-    <title>Oussama Said</title>
+    <link rel="icon" href="assets/img/logo.png" type="image/png">
+    <title>Oussema Said</title>
 </head>
 <body>
     <!-- HEADER -->
@@ -68,7 +68,7 @@
     <main class="main">
         <!-- HOME -->
         <section id="home" class="hero-section">
-            <img src="https://images.unsplash.com/photo-1517077304055-6e89abbf09b0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2069&q=80" alt="Hero Background" class="hero-image" />
+            <img src="assets/img/welcome.jpg" alt="Hero Background" class="hero-image" />
             <div class="hero-content">
                 <h1>Oussema Said</h1>
                 <p>Computer Engineering Student & Software Developer</p>
