--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                     <p>
                         I'm a Computer Engineering student at RWTH Aachen University with a strong passion for software development.
                         I'm deeply interested in artificial intelligence and machine learning, and I'm always eager to explore
-                        new technologies, solve real-world problems, and keep learning. I enjoy turning ideas into code and
-                        continuously improving through hands-on projects and collaboration.
+                        new technologies, solve real world problems, and keep learning. I enjoy turning ideas into code and
+                        continuously improving through hands on projects and collaboration.
                     </p>
                 </div>
             </div>
