--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
      <link rel="stylesheet" href="assets/css/style.css">
     
     <link rel="icon" href="assets/img/logo.png" type="image/png">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EKLKVTRVDD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-EKLKVTRVDD');
+</script>
+
     <title>Oussema Said</title>
 </head>
 <body>
