changed about me text

--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                 <img src="assets/img/IMG_0147 (1).JPEG" alt="Personal Photo" class="personalpic" />
                 <div class="about-text">
                     <p>
-                        I'm a Computer Engineering student at RWTH Aachen University with a strong passion for software development.
-                        I'm deeply interested in artificial intelligence and machine learning, and I'm always eager to explore
-                        new technologies, solve real world problems, and keep learning. I enjoy turning ideas into code and
-                        continuously improving through hands on projects and collaboration.
-                    </p>
+    I'm a Computer Engineering student at RWTH Aachen University with a solid foundation in both theory and hands on experience, and a strong passion for software development.
+    I'm particularly interested in machine learning and data, and how they can be used to build intelligent, impactful systems.
+    I'm always working on something, whether it's for a course or just out of curiosity. I love solving real problems, exploring new technologies, and turning ideas into useful, working software.
+</p>
+
                 </div>
             </div>
         </section>
