added links to the contact me section

--- a/index.html
+++ b/index.html
@@ -208,29 +208,29 @@
 
         <!-- CONTACT -->
         <section id="contactme" class="section">
-            <h2>Contact Me</h2>
-            <div class="contact-container">
-                <p>If you'd like to get in touch, you can reach me using the following methods.</p>
-                <div class="contact-rows">
-                    <div class="contact-item">
-                        <h3>Email</h3>
-                        <p>oussama.said@rwth-aachen.de</p>
-                    </div>
-                    <div class="contact-item">
-                        <h3>LinkedIn</h3>
-                        <p>Oussema Said</p>
-                    </div>
-                    <div class="contact-item">
-                        <h3>GitHub</h3>
-                        <p>oussemasaid181</p>
-                    </div>
-                    <div class="contact-item">
-                        <h3>Instagram</h3>
-                        <p>@oussinmotion</p>
-                    </div>
-                </div>
+    <h2>Contact Me</h2>
+    <div class="contact-container">
+        <p>If you'd like to get in touch, you can reach me using the following methods.</p>
+        <div class="contact-rows">
+            <div class="contact-item">
+                <h3>Email</h3>
+                <p>oussama.said@rwth-aachen.de</p>
             </div>
-        </section>
+            <div class="contact-item">
+                <h3>LinkedIn</h3>
+                <p><a href="https://www.linkedin.com/in/oussema-said-636599272/" target="_blank" rel="noopener noreferrer">Oussema Said</a></p>
+            </div>
+            <div class="contact-item">
+                <h3>GitHub</h3>
+                <p><a href="https://github.com/oussemasaid181" target="_blank" rel="noopener noreferrer">oussemasaid181</a></p>
+            </div>
+            <div class="contact-item">
+                <h3>Instagram</h3>
+                <p><a href="https://www.instagram.com/oussinmotion" target="_blank" rel="noopener noreferrer">@oussinmotion</a></p>
+            </div>
+        </div>
+    </div>
+</section>
     </main>
 
     <script src="assets/js/main.js"></script>
